# slidicom

./: .gitignore  README.md  preprocessing_example.py  pyproject.toml  requirements.txt  setup.py  test.py
slidicom/: __init__.py  _version.py  dicom.py  preprocessing.py  pyramid.py
slidicom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
slidicom/binaries/lib/: libopenslide.lib
slidicom/openslide_binaries/: VERSIONS.md
slidicom/preprocessing/: __init__.py  cordinates.py
slidicom/splitter/: __init__.py  cordinates.py
